--- a/index.css
+++ b/index.css
@@ -387,7 +387,6 @@ nav button.btn-toggle[aria-expanded="true"] > i:last-child {
     justify-content: flex-end;
     /* margin-top: 5rem; */
     /* margin-right: 17rem; */
-    margin-top: 5rem;
     padding-right: 5rem;
 }
 
